--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -6,8 +6,8 @@
 :root {
 	--radius: 0.5rem;
 
-	--background: oklch(100% 0 0);
-	--foreground: oklch(13.71% 0.036 258.53);
+	--background: oklch(100% 0.00011 271.152);
+	--foreground: oklch(11.492% 0.00001 271.152);
 
 	--card: oklch(100% 0 0);
 	--card-foreground: oklch(13.71% 0.036 258.53);
@@ -15,17 +15,17 @@
 	--popover: oklch(100% 0 0);
 	--popover-foreground: oklch(13.71% 0.036 258.53);
 
-	--primary: oklch(20.79% 0.0399 265.73);
+	--primary: oklch(37.031% 0.04225 163.82);
 	--primary-foreground: oklch(98.38% 0.0035 247.86);
 
-	--secondary: oklch(86.48% 0.0153 248);
+	--secondary: oklch(65.704% 0.09751 158.328);
 	--secondary-foreground: oklch(20.79% 0.0399 265.73);
 
 	--muted: oklch(94.32% 0.0123 247.96);
 	--muted-foreground: oklch(40.68% 0.0281 257.44);
 
-	--accent: oklch(91.87% 0.01770618193703561 248.02064625050508);
-	--accent-foreground: oklch(20.79% 0.0399 265.73);
+	--accent: oklch(79.887% 0.07512 162.428);
+	--accent-foreground: oklch(100% 0.00011 271.152);
 
 	--border: oklch(92.9% 0.0126 255.53);
 	--input: oklch(92.56% 0.0133 255.54);
@@ -40,25 +40,27 @@
 }
 
 .dark {
-	--background: oklch(13.71% 0.036 258.53);
+	--background: oklch(16.959% 0.0577 142.511);
 	--foreground: oklch(98.38% 0.0035 247.86);
 
-	--card: oklch(13.71% 0.036 258.53);
+	--card: oklch(18.305% 0.03494 164.046);
 	--card-foreground: oklch(98.38% 0.0035 247.86);
 
 	--popover: oklch(13.71% 0.036 258.53);
 	--popover-foreground: oklch(98.38% 0.0035 247.86);
 
-	--primary: oklch(98.38% 0.0035 247.86);
-	--primary-foreground: oklch(20.79% 0.0399 265.73);
+	--primary: oklch(97.175% 0.02591 165.84);
+	--primary-foreground: oklch(30.283% 0.07605 153.091);
 
-	--secondary: oklch(34.74% 0.0295 260.13);
+	/* oklch(30.368% 0.07596 157.154); */
+	--secondary: oklch(27.031% 0.04225 163.82);
 	--secondary-foreground: oklch(98.38% 0.0035 247.86);
 
 	--muted: oklch(22.6% 0.0267 260.02);
-	--muted-foreground: oklch(71.07% 0.0351 256.79);
+	--muted-foreground: oklch(100% 0.00011 271.152);
 
-	--accent: oklch(20.56% 0.022816 260.0464);
+	/* oklch(30.368% 0.07596 157.154); */
+	--accent: oklch(35.708% 0.06303 159.026);
 	--accent-foreground: oklch(98.38% 0.0035 247.86);
 
 	--border: oklch(28% 0.0369 259.97);
