--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -8,6 +8,7 @@
 
 	--background: oklch(100% 0.00011 271.152);
 	--foreground: oklch(11.492% 0.00001 271.152);
+	--title: oklch(40.91% 0.035 130.13);
 
 	--card: oklch(100% 0 0);
 	--card-foreground: oklch(13.71% 0.036 258.53);
@@ -36,12 +37,14 @@
 	/* prefixed with foreground because it should look good on the background */
 	--foreground-destructive: oklch(51.46% 0.1979 16.57);
 
-	--ring: oklch(71.07% 0.0351 256.79);
+	--ring: oklch(40.91% 0.035 130.13);
 }
 
 .dark {
 	--background: oklch(22.213% 0.00003 271.152);
 	--foreground: oklch(98.38% 0.0035 247.86);
+	--title: oklch(40.91% 0.035 130.13);
+
 
 	--card: oklch(18.305% 0.03494 164.046);
 	--card-foreground: oklch(98.38% 0.0035 247.86);
@@ -73,7 +76,7 @@
 	/* prefixed with foreground because it should look good on the background */
 	--foreground-destructive: oklch(63.72% 0.2071 21.89);
 
-	--ring: oklch(65.28% 0.0684 260.07);
+	--ring: oklch(40.91% 0.035 130.13);
 }
 
 @theme inline {
